# agent-backend

./: .env_example  .gitignore  Dockerfile  README.md  interrupt_follow_up.py  knowledge_routing.py  main.py  pyproject.toml  tcm_builder.py  test_all_scenarios.py  test_deep_search_agent.py  test_deep_search_custom.py  test_deep_search_simple.py  test_diagnose_graph.py  test_middleware_integration.py  test_quick_validation.py  test_stream_output.py
app/src/agent/: __init__.py  checkpointer.py  tcm_builder.py  tcm_cypher_templates.py  tcm_image_analyzer.py  tcm_neo4j.py  tcm_prompts.py  tcm_service.py  tcm_states.py  tcm_validators.py
app/src/controller/: __init__.py  account_controller.py  chat_controller.py  conversation_controller.py  (+2 more)
app/tests/: test_deep_search_agent.py  test_deep_search_standalone.py
graphrag/: settings.yaml
graphrag/data/: settings_pdf.yaml
graphrag/dev/: graphrag_api.py  graphrag_indexing.py  graphrag_prompt_tune.py  graphrag_query.py  test.py
scripts/: create_accounts_tables.sql  explore_neo4j.py  generate_init_sql.py  import_builtin_models_2026.py  import_gitcc_pricing_models.py  import_tcm_data.py  init_tcm_db.sql  init_tcm_db_postgresql.sql  intent_recognition_test.py  migrate_neo4j_schema.py  migrate_to_accounts.py  start_celery.ps1
test/: all_providers_thinking.py  test_all_providers.py  test_claude_thinking.py  test_deepseek_thinking.py  test_doubao_thinking.py  test_gemini_thinking.py  test_minimax_thinking.py  test_moonshot_thinking.py  test_qwen_thinking.py  test_zhipu_thinking.py  thinking_mode_all.py
(+236 files in other folders)
