[project]
name = "zhongyi-agentic"
version = "0.1.0"
description = "多智能体中医问诊后端"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.128.0",
    "PyJWT>=2.8.0",
    "bcrypt>=4.0.0",
    "python-multipart>=0.0.9",
    "redis>=5.0.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "langchain-deepseek>=1.0.1",
    "pymilvus>=2.6.0",
    "sqlalchemy>=2.0.0",
    "sqlmodel>=0.0.16",
    "asyncpg>=0.29.0",
    "greenlet>=3.0.0",
    "neo4j>=5.0.0",
    "qdrant-client>=1.7.0",
    "python-dotenv>=1.0.0",
    "uvicorn>=0.30.0",
    "httpx>=0.27.0",
    "pydantic-settings>=2.0.0",
    "cryptography>=42.0.0",
    "celery>=5.3.0",
    "langgraph>=0.2.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
